--- a/sandman/src/main/res/values-pt/strings.xml
+++ b/sandman/src/main/res/values-pt/strings.xml
@@ -6,5 +6,8 @@
     <string name="json_viewer_disclaimer">Clique e segure em cima de qualquer item para copiar os dados</string>
     <string name="json_viewer_copy_feedback">key %1s copiado</string>
 
-    <string name="network_search_hint">Procure por metodo, status code ou url</string>
+    <string name="network_search_hint">Procure por método, status code ou url</string>
+    <string name="network_hour_info">Horário:</string>
+    <string name="network_elapsed_time_info">Tempo corrido:</string>
+    <string name="network_url_info">URL:</string>
 </resources>
