--- a/sandman/src/main/res/values/strings.xml
+++ b/sandman/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="json_viewer_copy_feedback">key %1s copied</string>
 
     <string name="network_search_hint">Search by method, code or url</string>
+    <string name="network_hour_info">Hour:</string>
+    <string name="network_elapsed_time_info">Elapsed time:</string>
+    <string name="network_url_info">URL:</string>
 </resources>
