--- a/content/database/src/main/res/values-pt/strings.xml
+++ b/content/database/src/main/res/values-pt/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="bigbrother_table_empty_state">Nada encontrado com a query atual</string>
+    <string name="bigbrother_expanded_plain_text">Valor expandido</string>
 </resources>
