--- a/content/database/src/main/res/values-pt/strings.xml
+++ b/content/database/src/main/res/values-pt/strings.xml
@@ -2,6 +2,6 @@
 <resources>
     <string name="bigbrother_table_empty_state">Nada encontrado com a query atual</string>
     <string name="bigbrother_expanded_plain_text">Valor expandido</string>
-    <string name="bigbrother_db_empty_state">Nenhum banco de dados encontrado</string>
+    <string name="bigbrother_db_empty_state">Nenhum arquivo de dados encontrado</string>
     <string name="bigbrother_db_search_hint">Pesquise por bd ou tabela</string>
 </resources>
