--- a/content/database/src/main/res/values/strings.xml
+++ b/content/database/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
 <resources>
     <string name="bigbrother_table_empty_state">Nothing found in current query</string>
     <string name="bigbrother_expanded_plain_text">Expanded data</string>
-    <string name="bigbrother_db_empty_state">No database found</string>
+    <string name="bigbrother_db_empty_state">No data file found</string>
     <string name="bigbrother_db_search_hint">Search by db name or table</string>
 </resources>
