--- a/content/database/src/main/res/values/strings.xml
+++ b/content/database/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="bigbrother_expanded_plain_text">Expanded data</string>
     <string name="bigbrother_db_empty_state">No data file found</string>
     <string name="bigbrother_db_search_hint">Search by db name or table</string>
+    <string name="bigbrother_prefs_save">Save</string>
+    <string name="bigbrother_prefs_string_disclaimer">Change the value then click save</string>
+    <string name="bigbrother_prefs_disclaimer">Click and hold to copy value or click to edit data</string>
 </resources>
