--- a/content/database/src/main/res/values-pt/strings.xml
+++ b/content/database/src/main/res/values-pt/strings.xml
@@ -7,4 +7,7 @@
     <string name="bigbrother_prefs_save">Salvar</string>
     <string name="bigbrother_prefs_string_disclaimer">Altere o valor e então clique em salvar</string>
     <string name="bigbrother_prefs_disclaimer">Clique e segure para copiar os dados ou clique para editar o valor</string>
+    <string name="bigbrother_filter_popup_clean_filter">Limpar filtros</string>
+    <string name="bigbrother_filter_popup_order_asc">Ordenar A - Z</string>
+    <string name="bigbrother_filter_popup_order_desc">Ordenar Z - A</string>
 </resources>
