--- a/content/database/src/main/res/values/strings.xml
+++ b/content/database/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="bigbrother_prefs_save">Save</string>
     <string name="bigbrother_prefs_string_disclaimer">Change the value then click save</string>
     <string name="bigbrother_prefs_disclaimer">Click and hold to copy value or click to edit data</string>
+    <string name="bigbrother_filter_popup_clean_filter">Remove filters</string>
+    <string name="bigbrother_filter_popup_order_asc">Order A - Z</string>
+    <string name="bigbrother_filter_popup_order_desc">Order Z - A</string>
 </resources>
