feat: Improve network details view
This commit enhances the network details view by:

- Adding support for rendering HTML, Multipart, and image responses directly within the view.
- Improving the handling and display of request/response bodies and headers.
- Adding Kotlin serialization for better data handling.
- Implementing `toReadable` and `toHtml` extension functions for Maps.
- Including an "Upload Image" and "XML API" example in the sample app.
- Adding an example image to assets for the upload example.
- Minor UI adjustments and code refactoring in `NetworkEntryDetailsActivity` and related classes.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="custom_page_comment">// Inside BigBrotherProvider</string>
     <string name="custom_page_title">Custom page</string>
     <string name="compose_activity_button">Compose activity</string>
+    <string name="upload_image">Upload image</string>
 </resources>
