--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -21,4 +21,5 @@
     <string name="custom_page_comment">// Dentro de BigBrotherProvider</string>
     <string name="custom_page_title">Pagina customizada</string>
     <string name="compose_activity_button">Compose activity</string>
+    <string name="upload_image">Upload image</string>
 </resources>
